<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation = "vertical"
    android:gravity = "top|center"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".Registration">


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:fontFamily="@font/varela_round"
        android:gravity="center"
        android:text="@string/signup"
        android:textColor = "#FFFFFF"
        android:textSize="30sp"
        android:typeface="serif" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/varela_round"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/regemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/varela_round"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/varela_round"
            android:hint="@string/phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
       >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/varela_round"
            android:hint="@string/user" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:paddingLeft="32dp"
        android:paddingBottom="10dp"
        android:textColor = "#FFFFFF"
        android:text="@string/usertxt"
        android:textSize="10sp"
        android:typeface="serif" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/varela_round"
            android:inputType = "textPassword"
            android:hint="@string/pass" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/varela_round"
            android:inputType = "textPassword"
            android:hint="@string/reenter" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:text="@string/signup" />


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:fontFamily="@font/varela_round"
        android:gravity="center"
        android:textColor = "#FFFFFF"
        android:text="@string/logintext"
        android:textSize="15sp"
        android:typeface="serif" />
    <TextView
        android:id = "@+id/loginnow"
        android:layout_marginStart="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:textColor = "#FFFFFF"
        android:text="@string/loginnow"
        android:gravity="center"
        android:textSize="15sp"
        android:typeface="serif"
        />

</LinearLayout>