<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation = "vertical"
    android:gravity="top|center"
    android:background = "@drawable/img"
    android:layout_height="match_parent"
    tools:context=".Login">


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:fontFamily="@font/varela_round"
        android:gravity="center"
        android:text="@string/login"
        android:textColor = "#FFFFFF"

        android:textSize="30sp"
        android:typeface="serif" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding = "20dp"
            android:fontFamily="@font/varela_round"
            android:hint="@string/usname" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:inputType = "textPassword"

            android:layout_height="wrap_content"
            android:fontFamily="@font/varela_round"
            android:hint="@string/pass" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:text= "login" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:fontFamily="@font/varela_round"
        android:gravity="center"
        android:text="@string/regtext"
        android:textColor = "#FFFFFF"
        android:textSize="15sp"
        android:typeface="serif" />
    <TextView
        android:id = "@+id/regnow"
        android:layout_marginStart="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:text="@string/regnow"
        android:textColor = "#FFFFFF"
        android:gravity="center"
        android:textSize="15sp"
        android:typeface="serif"
        />
</LinearLayout>